--- a/payroll/calculate/when/index.html
+++ b/payroll/calculate/when/index.html
@@ -128,19 +128,19 @@
             </ul>
 
 			<h2 id="h_0">Background</h2>
-			 <p>After you have determined that you are an <a href="#employer" aria-controls="mid-screen" class="overlay-lnk" role="button">employer, a trustee or a payer of other amounts <span class="far fa-question-circle"></span></a> and have opened a payroll program account, you have to calculate the CPP contributions, EI premiums, and income tax deductions based on the amounts you pay your employees.</p>
-			<p>You also have to calculate your share of CPP contributions and EI premiums.</p>
+			 <p>After you have determined that you are an <a href="#employer" aria-controls="mid-screen" class="overlay-lnk" role="button">employer, a trustee or a payer of other amounts <span class="far fa-question-circle"></span></a> and have opened a <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">payroll account&nbsp;<span class="far fa-question-circle"></span></a>, you have to calculate the CPP contributions, EI premiums, and income tax to deduct from amounts you pay your employees.</p>
+			<p>You also have to calculate your share of your employee's CPP contributions and EI premiums.</p>
             <h2 id="h_1">What to consider when calculating source deductions and contributions</h2>
             <p>When you calculate source deductions and contributions, you have to consider <strong>all</strong> of the following:</p>
            <ul class="fa-ul">
 	      <li><span class="fas fa-check fa-li text-success"></span> The <strong>employee's situation</strong> </li>
               <li><span class="fas fa-check fa-li text-success"></span> Your <strong>situation as an employer or a payer</strong> </li>
               <li><span class="fas fa-check fa-li text-success"></span> The <strong>type of employment </strong>held by the employee </li>
-              <li><span class="fas fa-check fa-li text-success"></span> The <strong>type of remuneration </strong>paid </li>
+              <li><span class="fas fa-check fa-li text-success"></span> The <strong>type of payment made </strong> </li>
 	      <li><span class="fas fa-check fa-li text-success"></span> The <strong>province of employment </strong> </li>    
             </ul>
             <h2 id="h_2">Your responsibilities  </h2>
-            <p>Every amount you deduct, withhold or collect as an employer or a payer pursuant to a fiscal law is deemed to be held in trust for the government until you remit the amount to the government in the prescribed manner and within the prescribed time period. Such amounts constitute a separate fund that is <strong>not part of your property</strong>.</p>
+            <p>Every amount you deduct or withhold or collect as an employer or a payer is deemed to be held in trust for the government until you remit the amount to the government in the manner and at the time prescribed by income tax taw. Such amounts constitute a separate fund that is <strong>not part of your property</strong>.</p>
           
 	
 
@@ -186,9 +186,9 @@
 <p>If you do not pay an amount that is due, the CRA may apply interest from the day the payment was due. </p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">The CRA sets the interest rate every calendar quarter, based on <a href="https://www.canada.ca/en/revenue-agency/services/tax/prescribed-interest-rates.html">prescribed interest rates</a> </li>
+<li class="cnjnctn-col">The CRA sets the interest rate for every calendar quarter, based on <a href="https://www.canada.ca/en/revenue-agency/services/tax/prescribed-interest-rates.html">prescribed interest rates</a> </li>
 <li class="cnjnctn-col">The interest is compounded daily </li>
-<li class="cnjnctn-col">The CRA applies interest to unpaid penalties </li>
+<li class="cnjnctn-col">The CRA applies interest to late payment of assessed penalties </li>
 </ul>
 <p>The interest rates are announced in the month preceding each calendar quarter.</p>
 
@@ -199,13 +199,13 @@
 <div class="col-xs-12">
 <dl class="dl-horizontal">
 <dt> <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-147.html#h-309170">ITA: 153(1)</a></dt> <dd>Requirement to deduct and remit </dd>
-<dt> <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-192.html#docCont">ITA: 161(11)</a></dt> <dd> Interest on penalties</dd>
+<dt> <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-192.html#docCont">ITA: 161(11)(c)</a></dt> <dd> Interest on penalties</dd>
 <dt> <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-192.html#docCont">ITA: 227(8)(a)</a></dt> <dd> Failure to deduct – 10% penalty</dd>
 <dt> <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-192.html#docCont">ITA: 227(8)(b)</a></dt> <dd> Failure to deduct – 20% penalty (gross negligence) </dd>
 <dt> <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-192.html#docCont">ITA: 227(8.3)</a></dt> <dd> Interest on amounts not deducted or withheld </dd>
 <dt> <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-192.html#docCont">ITA: 238(1)</a></dt> <dd> Prosecution </dd>
 <dt> <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-192.html#docCont">ITA: 248(11)</a></dt> <dd> Compound interest</dd>
-
+<dt> <a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-38.html#h-589953:~:text=639%2C%20s.%201-,Prescribed%20Rate%20of%20Interest,-4301%C2%A0Subject%20to">ITR: 4301</a></dt> <dd> Prescribed rate of interest</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-8/page-6.html#h-168250">CPP: 21(1)</a></dt> <dd> Requirement to deduct and remit </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-8/page-6.html#h-168250">CPP: 21(2)</a></dt> <dd> CPP liability for failure to deduct and remit</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-8/page-6.html#h-168250">CPP: 21(6)</a></dt> <dd> Failure to remit – Interest </dd>
@@ -225,6 +225,11 @@
 </dl>
 </div>
 </div>	
+		 
+		 ection id="account" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a payroll account</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/register/what.html #ajax-account"></div>
+	</div></section>
         
             <section id="employer" class="wb-overlay modal-content overlay-def wb-popup-mid">
                <header class="modal-header">
