--- a/payroll/calculate/when/itrates.html
+++ b/payroll/calculate/when/itrates.html
@@ -122,7 +122,7 @@
 				<li><span class="fas fa-check text-success fa-li fa-lg"></span> Provincial or territorial tax rates and income thresholds</li>
 				</ul>
 <details><summary>What are "tax rates"</summary>
-<p>This is the percentage of the employee’s taxable income that the employee will have withheld in income tax. There is no employer rate or share for income tax deductions.</p> </details>
+<p>This is the percentage of the employee’s taxable income that the employer will have withheld on account of the employee's income tax obligations. There is no employer rate or share for income tax deductions.</p> </details> 
 <details><summary>What are "income thresholds"</summary>
 <p> These are the ranges of taxable income on which a particular tax rate is applied for federal, provincial or territorial income tax. These are also known as ‘tax brackets’ and are different for federal, provincial and/or territorial income tax.</p> </details>
  <h2 class="h3">On this page</h2>
@@ -324,7 +324,7 @@
              
 <h3>Indexing for 2023</h3>
 <p>For 2023, the provincial income thresholds and personal amount have been indexed. They have been changed based on changes in the consumer price index.</p>
-<p>The indexing factor for January 1, 2023, is 7.0% The tax credits corresponding to the claim codes in the tables have been indexed accordingly. Employees will automatically receive the indexing change, whether or not they file Form TD1MB, 2023 Manitoba Personal Tax Credits Return.</p>
+<p>The indexing factor for January 1, 2023, is 7.0% The tax credits corresponding to the claim codes in the tables have been indexed accordingly. Employees will automatically receive the indexing increase, whether or not they file Form TD1MB, 2023 Manitoba Personal Tax Credits Return.</p>
 
 
 
@@ -861,7 +861,7 @@
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-84.html#h-297734">ITA: 117(1)</a></dt><dd> Tax payable under this part</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-84.html#h-297734">ITA: 117(2)</a></dt><dd> Rates for taxation years after 2015</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-84.html#h-297734">ITA: 117.1</a></dt><dd> Annual adjustment</dd>
-
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-149.html#h-309170:~:text=Marginal%20note%3A-,Withholding,-153%C2%A0(1">ITA: 153(1)</a></dt><dd> Requirement to deduct and remit</dd>
 <dt><a href="https://www.canlii.org/en/ab/laws/stat/rsa-2000-c-a-30/latest/rsa-2000-c-a-30.html">AB ITA: 4</a></dt><dd> Specified percentage</dd>
 <dt><a href="https://www.canlii.org/en/ab/laws/stat/rsa-2000-c-a-30/latest/rsa-2000-c-a-30.html">AB ITA: 6.1</a></dt><dd> Amount of tax payable for 2015 and subsequent taxation years</dd>
 <dt><a href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/96215_01">BC ITA: 4.1</a></dt><dd> Amount of tax payable</dd>
