--- a/payroll/calculate/when/learnit.html
+++ b/payroll/calculate/when/learnit.html
@@ -139,13 +139,13 @@
   <ul class="fa-ul">
 	      <li><span class="fas fa-check fa-li text-success"></span> Salary, wages, commissions or other remuneration including taxable benefits </li>
 <li><span class="fas fa-check fa-li text-success"></span> Honorariums from employment or office, director's fees, management fees, fees paid to board or committee members and executor's, liquidator's, or administrator's fees earned to administer an estate (as long as the executor, liquidator, or administrator <strong>does not act in this capacity </strong>in the regular course of business). </li>
-<li><span class="fas fa-check fa-li text-success"></span> Bonuses/retroactive pay and vacation pay </li>
-<li><span class="fas fa-check fa-li text-success"></span> Pensions, wages in lieu of termination notice, retiring allowances (severance pay), certain amounts received for wrongful dismissal and death benefits </li>
-<li><span class="fas fa-check fa-li text-success"></span> Remuneration received while on vacation, furlough, sabbatical, or sick leave, or for lost-time pay from a union, vacation pay, payments received  under a supplementary unemployment benefit plan that does not qualify as a SUBP under the Income Tax Act (such as employer paid maternity and parental top-up amounts)  and payments for sick leave credits and accrued vacation. </li>
+<li><span class="fas fa-check fa-li text-success"></span> Bonuses/retroactive pay increases and vacation pay. </li>
+<li><span class="fas fa-check fa-li text-success"></span> Pensions, wages in lieu of termination notice, retiring allowances (severance pay), certain amounts received for wrongful dismissal and death benefits. </li>
+<li><span class="fas fa-check fa-li text-success"></span> Remuneration paid while the employee is on vacation, furlough, sabbatical, or sick leave, or for lost-time pay from a union, vacation pay, benefit paid under a supplementary unemployment benefit plan to a trustee for payment of periodic amounts to employees who are laid off for any temporary or indefinite period  (such as employer paid maternity and parental top-up amounts) and payments for sick leave credits and accrued vacation. </li>
 <li><span class="fas fa-check fa-li text-success"></span> Wage-loss replacement plans benefits. </li>
-<li><span class="fas fa-check fa-li text-success"></span> Tips and gratuities that are <strong>controlled</strong> by you and received from the performance of services are considered income from employment </li>
-<li><span class="fas fa-check fa-li text-success"></span> <strong>Additional </strong>amounts that <strong>you pay </strong>while participating in a job creation project that Employment and Social Development Canada (ESDC) has approved </li>
-<li><span class="fas fa-check fa-li text-success"></span> Remuneration paid to a member of a religious order who has taken a vow of perpetual poverty, unless you pay the remuneration to the order or the employee gives you a letter of authority </li>
+<li><span class="fas fa-check fa-li text-success"></span> Tips and gratuities that are <strong>controlled</strong> by you and received from the performance of services are considered income from employment. </li>
+<li><span class="fas fa-check fa-li text-success"></span> <strong>Additional </strong>amounts that <strong>you pay </strong>while participating in a job creation project that Employment and Social Development Canada (ESDC) has approved. </li>
+<li><span class="fas fa-check fa-li text-success"></span> Remuneration paid to a member of a religious order who has taken a vow of perpetual poverty, unless you pay the remuneration to the order or the employee gives you a letter of authority. </li>
 </ul>
 
 <p>To determine if you need to deduct income tax, refer to:</p>
@@ -168,7 +168,7 @@
 <p>To determine how much income tax to deduct, you may need the following to determine the employee's tax deductions, including the basic personal amount:</p>
 
   <ul class="fa-ul">
-	      <li><span class="fas fa-check fa-li text-success"></span> Federal form - TD1: To be filled out by all individuals </li>
+	      <li><span class="fas fa-check fa-li text-success"></span> Federal form - TD1: To be filled out by individuals that have a new employer or payer, or want to change amounts from previous amounts claimed, or want to claim the deduction for living in a prescribed zone or want to increase income tax deductions </li>
 <li><span class="fas fa-check fa-li text-success"></span> Provincial and territorial form - TD1: To be filled out by all individuals that are claiming more than the basic personal amount based on their province of employment </li>
 <li><span class="fas fa-check fa-li text-success"></span> Form TD1X: To be filled out by employees that are paid by commission and who claim expenses </li>
 <li><span class="fas fa-check fa-li text-success"></span> TD1-IN: To be filled out by employees who are registered, or entitled to be registered under the Indian Act</li>
@@ -186,10 +186,10 @@
 	      <li><span class="fas fa-check fa-li text-success"></span> A deduction for living in a prescribed zone </li>
                    <li><span class="fas fa-check fa-li text-success"></span> An amount that a tax services office has authorized</li>
                   <li><span class="fas fa-check fa-li text-success"></span> Employee's contributions to a registered pension plan (RPP) </li>
-                  <li><span class="fas fa-check fa-li text-success"></span> Union dues</li>
+                  <li><span class="fas fa-check fa-li text-success"></span> Union dues paid by the employee, to the extent that the employee has not been reimbursed and is not entitled to be reimbursed</li>
                   <li><span class="fas fa-check fa-li text-success"></span> Employee's contributions to a retirement compensation arrangement (RCA) or certain pension plans</li>
-                  <li><span class="fas fa-check fa-li text-success"></span> Employee's and employer's contributions to a registered retirement savings plan (RRSP) provided you have reasonable grounds to believe the employee can deduct the contribution for the year </li>
-                  <li><span class="fas fa-check fa-li text-success"></span> Employee's contributions to a pooled registered pension plan (PRPP), or a similar provincial pension plan, as long as the plan is registered with the Minister of National Revenue and you have reasonable grounds to believe the employee can deduct the contributions for the year </li>
+                  <li><span class="fas fa-check fa-li text-success"></span> Premiums under a  registered retirement savings plan (RRSP) provided you have reasonable grounds to believe the employee can deduct the premiums  for the year </li>
+                  <li><span class="fas fa-check fa-li text-success"></span> Employee's contributions to a pooled registered pension plan (PRPP), or a specified pension plan (which includes the Saskatchewan Pension Plan) , as long as the plan is registered with the Minister of National Revenue and you have reasonable grounds to believe the employee can deduct the contributions for the year </li>
                   <li><span class="fas fa-check fa-li text-success"></span> First and second additional contributions to the CPP made by the employee  </li>
                </ul>
                <details>
@@ -226,14 +226,15 @@
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-147.html#h-309170">ITA: 153(1)</a></dt><dd>Withholding </dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-147.html#h-309170">ITA: 153(1.1)</a></dt><dd>Undue hardship </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-147.html#h-309170">ITA: 153(1)</a></dt><dd>Requirement to deduct and remit</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-147.html#h-309170">ITA: 153(1.2)</a></dt><dd>Election to increase withholding </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-1.html#h-583528">ITR: 100(1)</a></dt><dd>Interpretation </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-1.html#h-583528">ITR: 100(3)</a></dt><dd>Deductions from the payment of remuneration </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-1.html#h-583528">ITR: 100(4)</a></dt><dd>Province of employment </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-1.html#h-583528">ITR: 101</a></dt><dd>Deductions and remittances </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-1.html#h-583528">ITR: 102</a></dt><dd>Periodic payments </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-2.html#docCont:~:text=Non%2DPeriodic%20Payments">ITR: 103</a></dt><dd>Non-periodic payments </dd>
+
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-3.html#h-583874">ITR: 107</a></dt><dd>Employee’s returns</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-4.html#docCont">ITR: 109(1)</a></dt><dd>Elections to increase deductions  </dd>
 
