--- a/payroll/calculate/corrections/index.html
+++ b/payroll/calculate/corrections/index.html
@@ -155,7 +155,7 @@
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">The recovered contribution or premium can be equal to, <strong>but not more than</strong>, the amount that should have been deducted from each payment </li>
 <li class="cnjnctn-col">You <strong>cannot </strong>recover a contribution or a premium amount that has been outstanding for more than 12 months </li>
-<li class="cnjnctn-col">You <strong>cannot </strong>adjust the employee's income tax deduction to cover the EI shortfall </li>
+<li class="cnjnctn-col">You <strong>cannot </strong>adjust the employee's income tax deduction to cover the CPP or EI shortfall </li>
 </ul>
 <h3 id="h_3_2">What if you cannot recover the deduction in the current tax year</h3>
 <p>If you should have made a deduction in a previous year and you recovered it through an additional deduction in the current year, <strong>do not </strong>report the recovered contributions or premiums on the current year's slip. </p>
@@ -163,11 +163,12 @@
 
 </details>
 
-<details><summary>You deducted<strong> more or you under deducted income tax</strong></summary>
+<details><summary>You <strong>under deducted or over deducted income tax</strong></summary>
 <p>You may realize that the required amount of income tax was not deducted from amounts paid to your employee. </p>
 <h3 id="h_4_1">How to correct the error</h3>
 <p>If you have under deducted or over deducted income tax, you should advise your employee as soon as you know that the required amount of income tax was not deducted. You can make an adjustment on a subsequent pay.</p>
 <p>If the adjustment is not made before filing, the T4 slip does not need to be changed and the individual will receive credit for the deduction on their personal income tax return.</p>
+<p>You should remit any required amount immediately.  Penalty and interest may be charged for late payments.</p>
 
 </details>
 </div>
