line edit - by mail

--- a/sred/scientific-research-experimental-development-tax-incentive-program/how-submit.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/how-submit.html
@@ -266,7 +266,7 @@
 </div>
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">By mail<span class="wb-inv">: Option 2 of X</span></h4>
-<p>Individuals, trusts, and partnerships who file a paper income tax return may send their claim by mail.</p>
+<p>Individuals, trusts, and partnerships who file a paper income tax return may send their claim by mail to the Tax Services Office where they file their income tax.</p>
 </div></div>
 	      
 
