--- a/subway/mghrtc/indexmaire.html
+++ b/subway/mghrtc/indexmaire.html
@@ -56,11 +56,11 @@
          <main role="main" property="mainContentOfPage" class="container">
             <div aria-hidden="true">
                <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted"> </p>
-               <h1 class="gc-thickline mrgn-tp-0">Multigenerational home renovation tax credit (MHRTC)</h1>
+               <h1 class="gc-thickline mrgn-tp-0">Multigenerational Home Renovation Tax Credit (MHRTC)</h1>
                <div class="row">
                   <div class="col-md-8">
 				  <span class="label label-warning">Status: Available starting on 2023 tax returns</span>
-                     <p class="mrgn-tp-md">The multigenerational home renovation tax credit (MHRTC) is a <strong>new</strong> refundable tax credit that can be claimed on your income tax and benefit return starting in tax year 2023.</p>
+                     <p class="mrgn-tp-md">The Multigenerational Home Renovation Tax Credit (MHRTC) is a <strong>new</strong> refundable tax credit that can be claimed on your income tax and benefit return starting in tax year 2023.</p>
 					<p>If you are eligible, you can claim this credit for certain renovation expenses to create a <span class="nowrap">self-contained</span> secondary unit. The secondary unit must allow a senior or an adult who is eligible for the disability tax credit to live with a qualifying relative.</p>
 
 					 <p>You can claim up to $50,000 in qualifying renovation costs. The MHRTC is 15% of those costs, to a maximum of $7,500.</p>
