--- a/subway/mghrtc/who-ctestmaire.html
+++ b/subway/mghrtc/who-ctestmaire.html
@@ -247,7 +247,7 @@
 	     <ul>
 <li>A resident of Canada from the time of death until the end of the year if they were resident in Canada immediately before they died</li>
 <li>The same age at the end of the year as they would have been if they were alive at the end of the year</li>
-<li>The cohabiting spouse of common-law partner of another individual (referred to as the surviving spouse) at the end of the year if:</li>
+<li>The cohabiting spouse or common-law partner of another individual (referred to as the surviving spouse) at the end of the year if:</li>
 		     <ul>
 			     <li>They were cohabiting immediately before death</li>
 			     <li>The surviving spouse is not the cohabiting spouse or common-law partner of somebody else at the end of the year</li> </ul>
