--- a/subway/mghrtc/who-dtestmaire.html
+++ b/subway/mghrtc/who-dtestmaire.html
@@ -105,7 +105,7 @@
                   <li><a href="#h-2">Examples of situations that do and do not qualify</a></li>
                </ul>
 	                       <h2 id="h-1">Eligibility for the MHRTC</h2>
-		 <p>The MHRTC has eligibility criteria that deals with
+		 <p>The MHRTC has eligibility criteria that deals with:
 			 <ul>
 				 <li>Qualifying individuals</li>
 				 <li>Eligible individuals</li>
