--- a/payroll/calculate/corrections/index.html
+++ b/payroll/calculate/corrections/index.html
@@ -121,8 +121,24 @@
 
 <p>You may need to correct the following deduction error or salary overpayment in the current tax year:</p>
 
+<details><summary>You <strong>under deducted CPP contributions or EI premiums</strong> (recovering)</summary>
+<p>If you discover that you have under deducted CPP or EI, you are responsible for remitting the balance due for <strong>both </strong>the employer's and employee's shares. If you do not remit the amount, you may receive a PIER review.</p>
+<h3 id="h_3_1">How to correct the error</h3>
+<p>You can recover the employee's contributions or premiums from later payments to the employee, under the following conditions:</p>
 
-<details><summary>You deducted <strong>more CPP contributions or EI premiums</strong> from the employee (overpayment)</summary>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col">The recovered contribution or premium can be equal to, <strong>but not more than</strong>, the amount that should have been deducted from each payment </li>
+<li class="cnjnctn-col">You <strong>cannot </strong>recover a contribution or a premium amount that has been outstanding for more than 12 months </li>
+<li class="cnjnctn-col">You <strong>cannot </strong>adjust the employee's income tax deduction to cover the CPP or EI shortfall </li>
+</ul>
+<h3 id="h_3_2">What if you cannot recover the deduction in the current tax year</h3>
+<p>If you should have made a deduction in a previous year and you recovered it through an additional deduction in the current year, <strong>do not </strong>report the recovered contributions or premiums on the current year's slip. </p>
+<p>Learn more: <a href="../../file/correct.html">Correct deduction errors - Make corrections after filing</a></p>
+
+</details>
+
+
+<details><summary>You <strong>over deducted CPP contributions or EI premiums</strong> (overpayment)</summary>
 
 <p>If you over deducted CPP or EI (for example, the maximum amount was exceeded, or the employee was not employed in pensionable/insurable employment) from an employee and you become aware of it in the <strong>current tax year: </strong></p>
 
@@ -147,21 +163,6 @@
 
 </details>
 
-<details><summary>You <strong>under deducted CPP contributions or EI premiums</strong> from the employee (recovering)</summary>
-<p>If you discover that you have under deducted CPP or EI, you are responsible for remitting the balance due for <strong>both </strong>the employer's and employee's shares. If you do not remit the amount, you may receive a PIER review.</p>
-<h3 id="h_3_1">How to correct the error</h3>
-<p>You can recover the employee's contributions or premiums from later payments to the employee, under the following conditions:</p>
-
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">The recovered contribution or premium can be equal to, <strong>but not more than</strong>, the amount that should have been deducted from each payment </li>
-<li class="cnjnctn-col">You <strong>cannot </strong>recover a contribution or a premium amount that has been outstanding for more than 12 months </li>
-<li class="cnjnctn-col">You <strong>cannot </strong>adjust the employee's income tax deduction to cover the CPP or EI shortfall </li>
-</ul>
-<h3 id="h_3_2">What if you cannot recover the deduction in the current tax year</h3>
-<p>If you should have made a deduction in a previous year and you recovered it through an additional deduction in the current year, <strong>do not </strong>report the recovered contributions or premiums on the current year's slip. </p>
-<p>Learn more: <a href="../../file/correct.html">Correct deduction errors - Make corrections after filing</a></p>
-
-</details>
 
 <details><summary>You <strong>under deducted or over deducted income tax</strong></summary>
 <p>You may realize that the required amount of income tax was not deducted from amounts paid to your employee. </p>
