--- a/subway/mghrtc/expensesmaire.html
+++ b/subway/mghrtc/expensesmaire.html
@@ -47,7 +47,7 @@
                 title: "Tax credits and benefits for individuals",
                 href: "https://www.canada.ca/en/services/taxes/child-and-family-benefits.html"
               },{
-                title: "Multigenerational home renovation tax credit (MHRTC)",
+                title: "Multigenerational Home Renovation Tax Credit (MHRTC)",
                 href: "index.html"
               }
               ],
@@ -58,7 +58,7 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
             <nav class="gc-subway provisional">
-               <h1>Multigenerational home renovation tax credit (MHRTC)</h1>
+               <h1>Multigenerational Home Renovation Tax Credit (MHRTC)</h1>
                <ul>
                   <li><a href="who.html">Who can claim</a></li>
                   
