--- a/payroll/calculate/corrections/index.html
+++ b/payroll/calculate/corrections/index.html
@@ -123,17 +123,19 @@
 
 <details><summary>You <strong>under deducted CPP contributions or EI premiums</strong> (recovering)</summary>
 <p>If you discover that you have under deducted CPP or EI, you are responsible for remitting the balance due for <strong>both </strong>the employer's and employee's shares. If you do not remit the amount, you may receive a PIER review.</p>
+<p>Learn more: <a href="/cra-arc/payroll/file/pier.html">Pensionable and insurable earnings review (PIER)</a></p>
+
 <h3 id="h_3_1">How to correct the error</h3>
 <p>You can recover the employee's contributions or premiums from later payments to the employee, under the following conditions:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">The recovered contribution or premium can be equal to, <strong>but not more than</strong>, the amount that should have been deducted from each payment </li>
-<li class="cnjnctn-col">You <strong>cannot </strong>recover a contribution or a premium amount that has been outstanding for more than 12 months </li>
-<li class="cnjnctn-col">You <strong>cannot </strong>adjust the employee's income tax deduction to cover the CPP or EI shortfall </li>
+<li class="cnjnctn-col">The recovered contribution or premium can be <strong>equal to, but not more than</strong>, the amount that should have been deducted from each payment </li>
+<li class="cnjnctn-col">You <strong>cannot </strong>recover a contribution or a premium amount that has been outstanding for <strong>more than 12 months</strong> </li>
+<li class="cnjnctn-col">You <strong>cannot </strong>adjust the employee's income tax deduction to <strong>cover the CPP or EI shortfall</strong> </li>
 </ul>
 <h3 id="h_3_2">What if you cannot recover the deduction in the current tax year</h3>
 <p>If you should have made a deduction in a previous year and you recovered it through an additional deduction in the current year, <strong>do not </strong>report the recovered contributions or premiums on the current year's slip. </p>
-<p>Learn more: <a href="../../file/correct.html">Correct deduction errors - Make corrections after filing</a></p>
+<p>Learn more: <a href="/cra-arc/payroll/file/correct.html">Correct deduction errors after filing</a></p>
 
 </details>
 
@@ -149,9 +151,9 @@
 </ul>
 <h3 id="h_2_1">What if you cannot reimburse the employee</h3>
 <p>If the over deduction <strong>cannot </strong>be reimbursed, you must report the total CPP or EI deductions and correct pensionable or insurable earnings on the employee's T4 slip.</p> 
-
-<p>Learn more: <a href="../../file/correct.html">Correct prior year payroll deduction errors</a></p>
 <p>The <strong>employee portion </strong>will be refunded when the employee files their personal income tax return.</p>
+<p>Learn more: <a href="/cra-arc/payroll/file/correct.html">Correct deduction errors after filing</a></p>
+
 <h3 id="h_2_2">How to request a refund for the employer's share</h3>
 <p>If the over deduction <strong>cannot</strong> be reimbursed, you can request a refund by sending a completed <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/pd24.html">Form PD24, Application for a Refund of Overdeducted CPP Contributions or EI Premiums</a>. </p>
 <p>You can send the application with your information return or send it later within the following time limits:</p>
@@ -170,7 +172,7 @@
 <p>If you have under deducted or over deducted income tax, you should advise your employee as soon as you know that the required amount of income tax was not deducted. You can make an adjustment on a subsequent pay.</p>
 <p>If the adjustment is not made before filing, the T4 slip does not need to be changed and the individual will receive credit for the deduction on their personal income tax return.</p>
 <p>You should remit any required amount immediately.  Penalty and interest may be charged for late payments.</p>
-
+<p>Learn more: <a href="/cra-arc/payroll/remit/when.html#h_2">What if you remit (pay) late or you do not make a payment</a></p>
 </details>
 </div>
 </div><h2> Prior year corrections</h2>
