--- a/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars.html
@@ -84,7 +84,7 @@
 <div class="col-md-8">
   <h2>Service summary</h2>
   <p>The Canada Revenue Agency offers information webinars on a  variety of topics to help businesses gain a deeper understanding of the  Scientific Research and Experimental Development (SR&amp;ED) program. </p>
-  <p><span class="far fa-inbox fa-lg text-muted"></span> Sign up for the <a href="https://www.canada.ca/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-tax-incentives.html">SR&amp;ED electronic mailing list</a> to be notified of upcoming webinars and program updates.</p>
+  <p class="mrgn-tp-md"><span class="fas fa-inbox fa-lg text-muted mrgn-rght-sm"> </span> Sign up for the <a href="https://www.canada.ca/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-tax-incentives.html">SR&amp;ED electronic mailing list</a> to be notified of upcoming webinars and program updates.</p>
   <h2>Upcoming  webinars</h2>
 
   <h3>Public webinars on SR&amp;ED eligibility</h3>
