--- a/payroll/calculate/when/index.html
+++ b/payroll/calculate/when/index.html
@@ -226,7 +226,7 @@
 </div>
 </div>	
 		 
-		 ection id="account" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a payroll account</h2>
+		 <section id="account" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a payroll account</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/register/what.html #ajax-account"></div>
 	</div></section>
