--- a/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars.html
@@ -86,7 +86,7 @@
   <p>The Canada Revenue Agency offers information webinars on a  variety of topics to help businesses gain a deeper understanding of the  Scientific Research and Experimental Development (SR&amp;ED) program. </p>
 
 <ul class="fa-ul">   
-  <li><span class="far fa-inbox fa-lg text-muted fa-li"></span> Sign up for the <a href="https://www.canada.ca/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-tax-incentives.html">SR&amp;ED electronic mailing list</a> to be notified of upcoming webinars and program updates.</li>
+  <li><span class="fas fa-inbox fa-lg text-muted fa-li"></span> Sign up for the <a href="https://www.canada.ca/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-tax-incentives.html">SR&amp;ED electronic mailing list</a> to be notified of upcoming webinars and program updates.</li>
 </ul>    	
 
   <h2>Upcoming  webinars</h2>
