--- a/payroll/calculate/corrections/index.html
+++ b/payroll/calculate/corrections/index.html
@@ -169,10 +169,20 @@
 <details><summary>You <strong>under deducted or over deducted income tax</strong></summary>
 <p>You may realize that the required amount of income tax was not deducted from amounts paid to your employee. </p>
 <h3 id="h_4_1">How to correct the error</h3>
-<p>If you have under deducted or over deducted income tax, you should advise your employee as soon as you know that the required amount of income tax was not deducted. You can make an adjustment on a subsequent pay.</p>
-<p>If the adjustment is not made before filing, the T4 slip does not need to be changed and the individual will receive credit for the deduction on their personal income tax return.</p>
-<p>You should remit any required amount immediately.  Penalty and interest may be charged for late payments.</p>
-<p>Learn more: <a href="/cra-arc/payroll/remit/when.html#h_2">What if you remit (pay) late or you do not make a payment</a></p>
+<p>If you have under deducted or over deducted income tax, you should advise your employee as soon as you know that the required amount of income tax was not deducted. 
+<h4>Make corrections after you remit (pay)</h4>
+<p>If you remitted:</p>
+
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col">more than you should have, you can use the overpayment towards a future payroll period in the current year, if possible</li>
+<li class="cnjnctn-col">less than you should have, you should remit any required amount immediately. A penalty may be charged for the late payment, including interest</li>
+</ul>
+<p>Learn more: <a href="/cra-arc/payroll/remit/corrections.html#h_1">Make corrections after you remit (pay)</a></p>
+
+<h4>Make corrections after you file</h4>
+<p>If you already filed the T4 slip, you <strong>do not</strong> need to file an amendment. Your employee will get the credit of the over deducted income tax on their T1 return.</p>
+<p>Learn more: <a href="/cra-arc/payroll/file/corrections.html">Make corrections after filing</a></p>
+
 </details>
 </div>
 </div><h2> Prior year corrections</h2>
