--- a/subway/mghrtc/who-ctestmaire.html
+++ b/subway/mghrtc/who-ctestmaire.html
@@ -156,7 +156,7 @@
 						  <li class="checkbox">
                             <input type="checkbox" id="criteria-3c" class="action-checkbox cb-dmm">
                             <label for="criteria-3c">
-				    This is the only MHRTC claim for the <strong>qualifying individual</strong> (senior who is 65 years of age or older, or adult who is eligible for the DTC). Only one renovation can be claimed for a qualifying individual during their lifetime.
+				    This is the only MHRTC claim for the <strong>qualifying individual</strong> (senior who is 65 years of age or older, or adult who is eligible for the DTC). <strong>Only</strong> one renovation can be claimed for a qualifying individual during their lifetime.
                                
 
 
