--- a/subway/mghrtc/who-ctestmaire.html
+++ b/subway/mghrtc/who-ctestmaire.html
@@ -165,7 +165,7 @@
 
                         <li class="checkbox">
                             <input type="checkbox" id="criteria-1a" class="action-checkbox cb-dmm">
-                            <label for="criteria-1a"><p>The person claiming the credit must be an <strong>eligible individual</strong>. An eligible individual is a resident of Canada from January 1 to December 31 of the year they're making the claim who <strong>either</strong>:</p>
+                            <label for="criteria-1a"><p>Any person claiming the credit must be an <strong>eligible individual</strong>. An eligible individual is a resident of Canada from January 1 to December 31 of the year they're making the claim who <strong>either</strong>:</p>
 							   <ul class="cnjnctn-type-or mrgn-tp-0">
 							  
  <li class="cnjnctn-col">
