--- a/subway/mghrtc/who-ctestmaire.html
+++ b/subway/mghrtc/who-ctestmaire.html
@@ -195,7 +195,7 @@
                                 </ul>								   
 								   </details>
 </ul>
-				                               
+	<p>If you are sharing renovation costs with another individual, refer to <a href="#h-3">Sharing renovation costs</a></p>			                               
                                
 							</label>
                               			<li class="checkbox">
