--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -1025,7 +1025,7 @@
 
             <section id="cpp2-contrib" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
                <header class="modal-header">
-                  <h2 class="modal-title">CPP2 contribution rates, maximums and exemptions</h2>
+                  <h2 class="modal-title">CPP2 contribution rates and maximums</h2>
                </header>
                <div class="modal-body">
 	<p class="lead hidden" id="max"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Maximum annual employee and employer contribution" (<strong>column&nbsp;4)</strong> that matches the "Year" (<strong>column&nbsp;1)</strong> </p>
@@ -1039,14 +1039,7 @@
  
      
 
-            <section id="exemption2" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
-               <header class="modal-header">
-                  <h2 class="modal-title">CPP2 basic exemption chart</h2>
-               </header>
-               <div class="modal-body">
-                  <div data-ajax-replace="/cra-arc/payroll/calculate/when/cpp2rates.html #ajax-exemption2"></div>
-               </div>
-            </section>
+          
 
             <section id="nocpp" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">
                <header class="modal-header">
