--- a/subway/mghrtc/claimmaire.html
+++ b/subway/mghrtc/claimmaire.html
@@ -144,7 +144,7 @@ Ends when the qualifying renovation is completed (for example, when the qualifyi
             <h2 id="h-3">Where to enter the claim on your return</h2>
 		 <p>For 2023 and later tax years, the MHRTC can be claimed on <strong>line 45355</strong> of your income tax and benefit return.</p>
 		 <p>Use Schedule 12, Multigenerational Home Renovation Tax Credit, to report your expenses related to the MHRTC and calculate the total credit you may claim.</p>
-			
+		 <p>You may claim more than one qualifying renovation in the same year.</p> <p> Learn more:  <a href="https://test.canada.ca/cra-arc/subway/mghrtc/expensesmaire.html">Expenses you can claim</a<>/p>
 
 <!--<h3>Claiming electronically versus on paper</h3>
 <dl class="dl-horizontal">
