--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -201,7 +201,7 @@
                                  <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span><span class="mrgn-tp-0 text-muted h5"> <a href="#cpp2-contrib" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max", "class": "hidden"}, {"action": "addClass", "source": "#max1, #cpprate", "class": "hidden"}, {"action": "removeClass", "source": "#ajax-cpprate2-tbl>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#ajax-cpprate2-tbl>tbody>tr>td:nth-child(1), #ajax-cpprate2-tbl>tbody>tr>td:nth-child(6)", "class": "info"}]'>Maximum annual employee CPP2 contributions&nbsp;<span class="far fa-question-circle"></span></a> in their <strong>employment with you</strong></span> 
+                                    </span><span class="mrgn-tp-0 text-muted h5"> <a href="#cpp2-contrib" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max", "class": "hidden"}, {"action": "addClass", "source": "#max1, #cpprate", "class": "hidden"}, {"action": "removeClass", "source": "#ajax-cpprate2-tbl>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#ajax-cpprate2-tbl>tbody>tr>td:nth-child(1), #ajax-cpprate2-tbl>tbody>tr>td:nth-child(4)", "class": "info"}]'>Maximum annual employee CPP2 contributions&nbsp;<span class="far fa-question-circle"></span></a> in their <strong>employment with you</strong></span> 
                                  </li>
                                  <li class="brdr-bttm">
                                     <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
@@ -1030,7 +1030,7 @@
                <div class="modal-body">
 	<p class="lead hidden" id="max"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Maximum annual employee and employer contribution" (<strong>column&nbsp;4)</strong> that matches the "Year" (<strong>column&nbsp;1)</strong> </p>
 	<p class="lead hidden" id="max1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Maximum annual pensionable earnings" (<strong>column&nbsp;2)</strong> that matches the "Year" (<strong>column&nbsp;1)</strong> </p>
-<p class="lead hidden" id="cpp2rate"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Employee and employer contribution rate" (<strong>column&nbsp;3</strong>) that matches the "Year" (<strong>column&nbsp;1</strong>) </p>
+<p class="lead hidden" id="rate"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Employee and employer contribution rate" (<strong>column&nbsp;3</strong>) that matches the "Year" (<strong>column&nbsp;1</strong>) </p>
 			
   <div data-ajax-replace="/cra-arc/payroll/calculate/when/cpp2rates.html #ajax-cpprate2"><a href="/cra-arc/payroll/calculate/when/cpp2rates.html">CPP2 contribution rates and maximums</a></div>
 	   
