--- a/subway/mghrtc/expensesmaire.html
+++ b/subway/mghrtc/expensesmaire.html
@@ -92,7 +92,7 @@
 <li><span class="fas fa-check text-success fa-li"></span> 
 	<p>Made or incurred by an <strong>eligible individual</strong> (or a trust that the eligible individual is a beneficiary to)</p>
 	<p>
-	Refer to: <a href="who.html">Who can claim</a></p>
+	Refer to: <a href="who-ctestmaire.html">Who can claim</a></p>
 </li>
 </ul>
 <p>A qualifying expenditure <strong>may include</strong>:</p>
