--- a/subway/mghrtc/indexmaire.html
+++ b/subway/mghrtc/indexmaire.html
@@ -68,13 +68,13 @@
                      <nav class="gc-subway provisional">
                         <h2>Sections</h2>
                         <dl>
-                           <dt><a href="who.html">Who can claim</a></dt>
+                           <dt><a href="who-ctestmaire.html">Who can claim</a></dt>
                            <dd>Who is eligible and what type of renovations can be claimed</dd>
                            
-						   <dt><a href="expenses.html">Expenses you can claim</a></dt>
+						   <dt><a href="expensesmaire.html">Expenses you can claim</a></dt>
 				<dd>Expenses that can and cannot be claimed, and expense limitations</dd>
 
-                           <dt><a href="claim.html">How to claim</a></dt>
+                           <dt><a href="claimmaire.html">How to claim</a></dt>
                            <dd>How to claim the credit on your return
 </dd>
                            
