--- a/subway/mghrtc/who-ctestmaire.html
+++ b/subway/mghrtc/who-ctestmaire.html
@@ -99,8 +99,8 @@
 		<h2 class="h3">On this page</h2>
                <ul>
                   <li><a href="#h-1">Eligibility checklist</a></li>
-		                        
-                  <li><a href="#h-2">If an individual dies</a></li>
+		       <ul>                 
+			       <li><a href="#h-2">If an individual dies</a></li> </ul>
  <li><a href="#h-3">Sharing renovation costs</a></li>
                   <li><a href="#h-4">Examples of situations that do and do not qualify</a></li>
                </ul>
