--- a/subway/mghrtc/who-ctestmaire.html
+++ b/subway/mghrtc/who-ctestmaire.html
@@ -244,7 +244,7 @@
 <li>The same age at the end of the year as they would have been if they were alive at the end of the year</li>
 <li>The cohabiting spouse or common-law partner of another individual (referred to as the surviving spouse) at the end of the year if:</li>
 		     <ul>
-			     <li>They were cohabiting immediately before death</li>
+			     <li>They were cohabiting immediately before death, <strong>and</strong></li>
 			     <li>The surviving spouse is not the cohabiting spouse or common-law partner of somebody else at the end of the year</li> </ul>
 </ul>
 </li> 
