--- a/subway/mghrtc/claimmaire.html
+++ b/subway/mghrtc/claimmaire.html
@@ -101,12 +101,13 @@ Ends when the qualifying renovation is completed (for example, when the qualifyi
 		 
 		  <h2 id="h-2">Splitting the credit between eligible individuals</h2>
 	   <p>When two or more individuals share the costs for the same qualifying renovation, the credit may be split between them as long as <strong>all</strong> of the following conditions are met:
-	   <ul><li>Each person claiming the MHRTC is an <strong>eligible individual</strong>
+	   <ul class="fa-ul">
+		 <li><span class="fas fa-check text-success fa-li"></span>Each person claiming the MHRTC is an <strong>eligible individual</strong>
 	   	<p>
 			Refer to: <a href="who-ctestmaire.html">Who can claim</a></p></li>
-			   <li>The <strong>total</strong> amount claimed between all eligible individuals is <strong>not</strong> more than the maximum</li>
-			   <li>The eligible individuals claim only qualifying expenditures that they incurred</li>
-		   <li>No MHRTC has previously been claimed for the <strong>qualifying individual</strong> (the person 65 years of age or older, or adult who qualifies for the disability tax credit)</li>
+			   <li><span class="fas fa-check text-success fa-li"></span>The <strong>total</strong> amount claimed between all eligible individuals is <strong>not</strong> more than the maximum</li>
+			   <li><span class="fas fa-check text-success fa-li"></span>The eligible individuals claim only qualifying expenditures that they incurred</li>
+		   <li><span class="fas fa-check text-success fa-li"></span>No MHRTC has previously been claimed for the <strong>qualifying individual</strong> (the person 65 years of age or older, or adult who qualifies for the disability tax credit)</li>
 	   </ul>
 	   
 	   <details>
