fixed heading structure

--- a/payroll/calculate/how/index2.html
+++ b/payroll/calculate/how/index2.html
@@ -157,7 +157,7 @@
             
             <h2 id="h_2">Manual calculations</h2>
    <p>Depending on the type of payment, you may also need to calculate the CPP, EI and income tax deductions manually.</p>      
-  <h2 id="h_1">Steps</h2>
+  <h3>Steps</h3>
 
 <ol class="lst-stps">
 
