--- a/payroll/calculate/how/index2.html
+++ b/payroll/calculate/how/index2.html
@@ -202,7 +202,8 @@
 <p>To get quick and easy access to new payroll deductions tables and other recently announced tax information, you can subscribe, <strong>free of charge</strong>, to:</p>
 <ul>
 <li><a href="https://www.canada.ca/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-payroll.html">Payroll electronic mailing list</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists.html">All electronic mailing lists</a></p>
+<li><a href="https://www.canada.ca/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists.html">All electronic mailing lists</a></li>
+</ul>
 
 
 
