fixed coding error

--- a/payroll/calculate/how/ei.html
+++ b/payroll/calculate/how/ei.html
@@ -84,9 +84,9 @@
                      <a href="index.html" class="hidden-xs hidden-sm">How to calculate</a>
                      <a href="index.html#gc-document-nav" class="visible-xs visible-sm">How to calculate</a>
                      <ul>
-                       pp.html" class="hidden-xs hidden-sm">Calculate CPP deductions</a>
-                           <a href="cpp.html#gc-document-nav" class="visible-xs visible-sm">Calculate CPP deductions</a> 
-                        </li>
+                        <li><a href="cpp.html" class="hidden-xs hidden-sm">Calculate CPP deductions</a>
+      <a href="cpp.html#gc-document-nav" class="visible-xs visible-sm">Calculate CPP deductions</a> 
+   </li>	
 			 <li><a href="cpp2.html" class="hidden-xs hidden-sm">Calculate second CPP (CPP2) deductions</a> <span class="label label-warning">New - 2024</span>
                            <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second CPP (CPP2) deductions <span class="label label-warning">New - 2024</span> </a> 
                         </li>       
