--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -184,9 +184,22 @@
                           
                         </li>
   
+<li><h4>Determine if the employee reached the first maximum contribution</h4>                          
+  <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/how/cpp.html#ajax-detmax"></div></p>
+
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
+ <li class="cnjnctn-col">
+   <span class="fas fa-ban text-danger fa-lg"></span> Do not deduct CPP2 contributions if they have <strong>not reached</strong> the first maximum, continue to XXX</li>
+	
+	<li class="cnjnctn-col">
+    <li class="cnjnctn-col">
+   <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to next step if they have <strong>reached</strong> the first maximum</li>
+  
+</ul>
+</li>
 
 <li>
-<h4>Determine if the employee reached the maximum contribution</h4>                          
+<h4>Determine if the employee reached the CPP2 maximum contribution</h4>                          
 <div id="ajax-detmax">           
 <p>Use the applicable calculation depending if your employee is pensionable for the full year or if your employee is pensionable <a href="#stop1" aria-controls="mid-screen" class="overlay-lnk" role="button">only for part of the year (prorate)&nbsp;<span class="far fa-question-circle"></span></a>.</p> 
 <h5>Employee has more than one employer</h5>
@@ -205,7 +218,7 @@
                                     <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span>  <span class="mrgn-tp-0 text-muted h5"> Employee's contributions to date for the year in their <strong>employment with you</strong></span>
+                                    </span>  <span class="mrgn-tp-0 text-muted h5"> Employee's CPP2 contributions to date for the year in their <strong>employment with you</strong></span>
                                     <div class="mrgn-tp-md"></div>
                                  </li>
                                  <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
