--- a/payroll/calculate/when/cpprates.html
+++ b/payroll/calculate/when/cpprates.html
@@ -69,9 +69,8 @@
       <li> <a href="index.html" class="hidden-xs hidden-sm">Get ready to make deductions </a> <a href="index.html#gc-document-nav" class="visible-xs visible-sm">Get ready to make deductions </a>
         <ul class="noline">
           <li> <a href="learncpp.html" class="hidden-xs hidden-sm">About the deduction of CPP contributions</a> <a href="learncpp.html#gc-document-nav" class="visible-xs visible-sm">About the deduction of CPP contributions</a> </li>
-          <li> <a href="ccprates.html" class="active" aria-current="page">CPP contribution rates, maximums and exemptions</a> </li>
- <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">Second CPP (CPP2) contribution rates and maximums</a> <span class="label label-warning">New - 2024</span>
-                           <a href="cpp2rates.html#gc-document-nav" class="visible-xs visible-sm">Second CPP (CPP2) contribution rates and maximums <span class="label label-warning">New - 2024</span> </a>
+         <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">Second CPP (CPP2) contribution rates and maximums</a> 
+                           <a href="cpp2rates.html#gc-document-nav" class="visible-xs visible-sm">Second CPP (CPP2) contribution rates and maximums </a> <span class="label label-warning">New - 2024</span>
                         </li>
 		<li> <a href="learnei.html" class="hidden-xs hidden-sm">About the deduction of EI premiums</a> <a href="learnei.html#gc-document-nav" class="visible-xs visible-sm">About the deduction of EI premiums</a> </li>
           <li> <a href="eirates.html" class="hidden-xs hidden-sm">EI premium rates and maximums</a> <a href="eirates.html#gc-document-nav" class="visible-xs visible-sm">EI premium rates and maximums</a> </li>
