--- a/payroll/calculate/how/index.html
+++ b/payroll/calculate/how/index.html
@@ -80,21 +80,31 @@
 	<li>
       <a href="index.html" class="active" aria-current="page">How to calculate</a>
  
-<!--
+
                      <ul>
-                        <li><a href="method.html" class="hidden-xs hidden-sm">Determine which method to use</a>
-                           <a href="method.html#gc-document-nav" class="visible-xs visible-sm">Determine which method to use</a> 
-                        </li>
+                     
                         <li><a href="cpp.html" class="hidden-xs hidden-sm">Calculate CPP deductions</a>
 			   <a href="cpp.html#gc-document-nav" class="visible-xs visible-sm">Calculate CPP deductions</a> 
                         </li>
+			  </li>
+			     <li><a href="cpp2.html" class="hidden-xs hidden-sm">Calculate second CPP (CPP2) deductions</a>
+                           <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second CPP (CPP2) deductions</a> <span class="label label-warning">New - 2024</span>
+                        </li>    
+
                         <li><a href="ei.html" class="hidden-xs hidden-sm">Calculate EI deductions</a>
                            <a href="ei.html#gc-document-nav" class="visible-xs visible-sm">Calculate EI deductions</a> 
                         </li>
                         <li><a href="tax.html" class="hidden-xs hidden-sm">Calculate income tax deductions</a>
                            <a href="tax.html#gc-document-nav" class="visible-xs visible-sm">Calculate income tax deductions</a> 
                         </li>
-                     </ul> -->
+			  <li><a href="tax.html" class="hidden-xs hidden-sm">Calculate income tax deductions</a>
+                           <a href="tax.html#gc-document-nav" class="visible-xs visible-sm">Calculate income tax deductions</a> 
+                        </li>     
+			   </li>
+			     <li><a href="gsthst.html" class="hidden-xs hidden-sm">Calculate the GST/HST to remit on benefits</a>
+                           <a href="gsthst.html#gc-document-nav" class="visible-xs visible-sm">Calculate the GST/HST to remit on benefits</a> 
+                        </li>   
+                     </ul> 
                   </li>
 
 
